# metafmt

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
ci/: Dockerfile  install-cross.sh
metayaml/: main.go
pkg/: yaml.go
src/: fmt.rs  main.rs  stdin.rs  update.rs  walk.rs
src/types/: json.rs  markdown.rs  mod.rs  sql.rs  toml.rs  yaml.rs
tests/: yaml_format.rs
tests/fixtures/yaml/: .metafmtignore  anchors_aliases.expected.yaml  anchors_aliases.input.yaml  blank_lines.expected.yaml  blank_lines.input.yaml  block_scalars.expected.yaml  block_scalars.input.yaml  comments.expected.yaml  comments.input.yaml  complex_nesting.expected.yaml  complex_nesting.input.yaml  flow_content.expected.yaml  github_actions.expected.yaml  github_actions.input.yaml  merge_tags.expected.yaml  merge_tags.input.yaml  multi_document.input.yaml  nested_mapping.expected.yaml  nested_mapping.input.yaml  quoted_scalars.input.yaml  sequence_of_mappings.expected.yaml  sequence_of_mappings.input.yaml  sequences.expected.yaml  sequences.input.yaml  simple_mapping.expected.yaml  simple_mapping.input.yaml
