[package]
name = "metafmt"
version = "0.1.9"
edition = "2021"
authors = ["Ryan Fowler"]
description = "A CLI for formatting configuration files"
repository = "https://github.com/ryanfowler/metafmt"
license = "MIT"
exclude = ["/.github", "/ci"]

[[bin]]
name = "metafmt"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
cmarkfmt = { version = "0.1.2" }
crossbeam = { version = "0.8.4" }
diffy = { version = "0.4.2" }
fastrand = { version = "2.3.0" }
fjson = { version = "0.3.1" }
flate2 = { version = "1.0.35" }
ignore = { version = "0.4.23" }
jemallocator = { version = "0.5.4" }
rand = { version = "0.9.0" }
serde = { version = "1.0.217", features = ["derive"] }
sqlformat = { version = "0.3.3" }
tar = { version = "0.4.43" }
termcolor = { version = "1.4.1" }
toml_edit = { version = "0.22.24" }
ureq = { version = "3.0.5", features = ["json"] }

[build-dependencies]
cgo = { version = "0.3.0" }
