[package]
name = "metafmt"
version = "0.1.9"
edition = "2021"
authors = ["Ryan Fowler"]
description = "A CLI for formatting configuration files"
repository = "https://github.com/ryanfowler/metafmt"
license = "MIT"
exclude = ["/.github", "/ci"]

[[bin]]
name = "metafmt"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
cmarkfmt = { version = "0.1.2" }
crossbeam = { version = "0.8.4" }
diffy = { version = "0.4.2" }
fastrand = { version = "2.3.0" }
fjson = { version = "0.3.1" }
flate2 = { version = "1.1.2" }
ignore = { version = "0.4.23" }
jemallocator = { version = "0.5.4" }
rand = { version = "0.9.2" }
serde = { version = "1.0.219", features = ["derive"] }
sqlformat = { version = "0.3.3" }
tar = { version = "0.4.44" }
termcolor = { version = "1.4.1" }
toml_edit = { version = "0.23.6" }
ureq = { version = "3.1.2", features = ["json"] }

[build-dependencies]
cgo = { version = "0.4.0" }
